# libretranslate-rs

./: .goutputstream-Y5A7X0  .replit  Cargo.toml  LICENSE  README.md
examples/: basic.rs  builder.rs  cli.rs  custom_url.rs  detect.rs  just_detect.rs  key.rs  language.rs  method.rs  parse.rs  unic_langid.rs
src/: builder.rs  error.rs  languages.rs  lib.rs  traits.rs
