[package]
name = "libretranslate"
version = "0.4.1"
authors = ["Grant Handy <grantshandy@gmail.com>", "Rafael G. Dantas <rafagd@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Use The Libretranslate Open Source Machine Translation"
repository = "https://github.com/DefunctLizard/libretranslate-rs/"
documentation = "https://docs.rs/libretranslate"
keywords = ["translate", "language", "libretranslate", "translation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
surf = "2.2.0"
unic-langid = "0.9.0"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"]}